# experimentos

particles/vanilla/: index.html  index.js  style.css
particles/vanilla_canvas/: index.html  main.js  package-lock.json  package.json  render.js  simulator.js  style.css
particles/vanilla_controls/: calculate.js  index.html  index_memory_leak.js  main.js  render.js  simulator.js  style.css
refactoring/src/main/java/com/example/refactoring/: Client.java  ClientService.java  PedidoItem.java  PedidoService.java  PedidoServiceImpl.java  PedidoServiceImpl2.java  PedidoServiceImpl3.java  PedidoServiceImpl4.java  Produto.java
refactoring/src/test/java/com/example/refactoring/: PedidoServiceImplTest.java  PedidoServiceImplTest2.java  PedidoServiceImplTest3.java  PedidoServiceImplTest4.java  RefactoringApplicationTests.java
rust-actix-chat-xp/: Cargo.toml
spring-prestodb-xp/: pom.xml
spring-prestodb-xp/src/main/java/br/artus/xp/prestodbxp/: PrestodbxpApplication.java
spring-prestodb-xp/src/test/java/br/artus/xp/prestodbxp/: PrestodbxpApplicationTests.java
spring-rabbitmq-example/: .gitignore
spring-rabbitmq-example/rabbitmqxp-consumer/: pom.xml
