[package]
name = "chat"
version = "0.1.0"
authors = ["Nikolay Kim <fafhrd91@gmail.com>"]
edition = "2018"

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
rand = "0.6.5"
byteorder = "1.3.1"
futures = "0.1"
tokio-codec = "0.1"
tokio-io = "0.1"
tokio-tcp = "0.1"
tokio-signal = "0.2"

serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

actix = "0.8.2"

actix-rt = "0.2.2"
actix_derive = "0.4"
bytes = "0.4"
crossbeam-channel = "0.3"
derive_more = "0.14.0"
hashbrown = "0.3.0"
log = "0.4"
lazy_static = "1.3.0"
bitflags = "1.0"
smallvec = "0.6"
parking_lot = "0.8"
tokio-executor = "0.1"
tokio-timer = "0.2.11"

